--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -20,3 +20,7 @@
     <li>{{ task.name }} - {{ task.status }}</li>
     {% endfor %}
 </ul>
+
+<nav>
+    <a href="{% url 'agregar_empleado' %}">Crear Empleado</a>
+</nav>
