--- a/core/templates/core/agregar_empleado.html
+++ b/core/templates/core/agregar_empleado.html
@@ -1,11 +1,19 @@
-
-{% extends 'base.html' %}
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+>
 
 {% block content %}
   <h2>Crear Empleado</h2>
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form.nombre.label_tag }} {{ form.nombre }}
+    {{ form.email.label_tag }} {{ form.email }}
+    {{ form.puesto.label_tag }} {{ form.puesto }}
+    
+    <label for="id_fecha_contratacion">Fecha de Contratación:</label>
+    <input type="date" name="fecha_contratacion" id="id_fecha_contratacion" required>
+    
     <button type="submit">Guardar</button>
   </form>
 {% endblock %}
